[package]
name = "rox"
version = "0.1.0"
edition = "2021"
description = "A Lox interpreter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_rgb = "0.2.0"
clap = {version = "3.1.6", features = ["cargo"]}
phf = { version = "0.10.1", features = ["macros"]}
regex = "1.5.5"
rustyline = "9.1.2"

[build-dependencies]
codegen = "0.1.3"
